--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,7 @@ h1{
     margin-left: auto;
     margin-right: auto;
     width: 650px;
-    height: 600px;
+    height: auto;
     padding: 30px;
     background-color: #2B3856;
-
 }
